[gd_scene load_steps=16 format=2]

[ext_resource path="res://scenes/enemy/zombie_jason.gd" type="Script" id=1]
[ext_resource path="res://assets/images/zombie_jason.png" type="Texture" id=2]
[ext_resource path="res://scenes/storm/lightningOutline.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/images/pooDeath.png" type="Texture" id=4]
[ext_resource path="res://assets/images/kevinwalk2.png" type="Texture" id=5]
[ext_resource path="res://scenes/enemy/Blood.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 6.35892 )

[sub_resource type="CapsuleShape2D" id=2]
height = 9.23089

[sub_resource type="Animation" id=3]
resource_name = "EWalk"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14, 15, 16, 17 ]
}

[sub_resource type="Animation" id=4]
resource_name = "NWalk"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22, 23, 24, 25, 26, 27 ]
}

[sub_resource type="Animation" id=5]
resource_name = "SWalk"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=6]
resource_name = "sit"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 30, 31, 32, 33, 34, 35, 36, 37, 38, 39 ]
}

[sub_resource type="Animation" id=7]
length = 2.1
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9, 1.05, 1.2, 1.35, 1.5, 1.65, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 30, 31, 32, 34, 35, 37, 38, 40, 41, 43, 44, 47, 48 ]
}

[sub_resource type="Animation" id=10]
resource_name = "kill"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("victim:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="CircleShape2D" id=9]
radius = 188.651

[node name="zombie_jason" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 1 )
speed = 80
followDistance = 0

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="feet_collision" type="CollisionShape2D" parent="."]
position = Vector2( -0.628212, 20.8208 )
shape = SubResource( 1 )

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2( -0.538471, 3.32056 )
shape = SubResource( 2 )
disabled = true

[node name="3DirSprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
vframes = 5
hframes = 10
frame = 30

[node name="lightningOutline" parent="3DirSprite" instance=ExtResource( 3 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="3DirSprite"]
autoplay = "sit"
anims/EWalk = SubResource( 3 )
anims/NWalk = SubResource( 4 )
anims/SWalk = SubResource( 5 )
anims/sit = SubResource( 6 )
anims/turn = SubResource( 7 )

[node name="kill_sprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 4 )
hframes = 30
frame = 20

[node name="victim" type="Sprite" parent="kill_sprite"]
show_behind_parent = true
texture = ExtResource( 5 )
vframes = 3
hframes = 10

[node name="Blood" parent="kill_sprite/victim" instance=ExtResource( 6 )]
amount = 140

[node name="AnimationPlayer" type="AnimationPlayer" parent="kill_sprite"]
anims/kill = SubResource( 10 )

[node name="detection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection"]
shape = SubResource( 9 )
[connection signal="animation_finished" from="3DirSprite/AnimationPlayer" to="." method="_on_turnaround"]
[connection signal="animation_finished" from="3DirSprite/AnimationPlayer" to="." method="_on_anim_animation_finished"]
[connection signal="area_entered" from="detection" to="." method="_on_detection"]
[connection signal="body_entered" from="detection" to="." method="_on_detection"]
[connection signal="body_entered" from="detection" to="." method="_on_detection_body_entered"]
